<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="mainActivityVm"
            type="com.spider.star.nexbase.login.viewmodal.MainActivityVm" />

        <variable
            name="login"
            type="com.spider.star.nexbase.login.modal.Login"/>

    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundimage">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nexbase"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="24sp"
                app:font="@{@string/pt_sans_web_text_bold}"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nex"
                android:orientation="vertical"
                android:layout_marginTop="100dp">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/cornor_round"
                    android:hint="@string/user_name"
                    android:padding="10dp"
                    android:inputType="text"
                    android:textAllCaps="false"
                    android:text="@={login.username}"
                    android:textColor="@color/black"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cornor_round"
                    android:hint="@string/Password"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:text="@={login.password}"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <TextView
                    android:id="@+id/login"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@drawable/login_screen"
                    android:text="@string/Login"
                    app:font="@{@string/pt_sans_web_text_bold}"
                    android:onClick="@{mainActivityVm::onClickLogin}"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>


</layout>