<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="paymentVm"
            type="com.spider.star.nexbase.payment.viewmodal.PaymentVm" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:onClick="@{paymentVm::OnClickbackPress}"
                            android:src="@drawable/ic_left_arrow"/>


                        <TextView
                            android:layout_marginLeft="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            app:font="@{@string/pt_sans_web_text_regular}"/>
                    </LinearLayout>


                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/invoices"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Gandhinathan"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                app:font="@{@string/pt_sans_web_text_regular}"/>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:text="Invoice No  001235"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                app:font="@{@string/pt_sans_web_text_regular}"/>


                        </LinearLayout>





                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp">


                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_height="fill_parent"
                                android:layout_width="0dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/service_details"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="20sp"
                                    app:font="@{@string/pt_sans_web_text_regular}"/>


                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="1.Laptop service"
                                    android:textSize="18sp"
                                    app:font="@{@string/pt_sans_web_text_regular}"/>



                            </LinearLayout>


                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_height="fill_parent"
                                android:layout_marginEnd="10dp"
                                android:layout_width="0dp"
                                android:orientation="vertical">


                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/amount"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="20sp"
                                    android:gravity="end"
                                    app:font="@{@string/pt_sans_web_text_regular}"/>

                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Rs.500"
                                    android:textColor="@color/black"
                                    android:textSize="18sp"
                                    android:gravity="end"
                                    app:font="@{@string/pt_sans_web_text_regular}"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tax"
                                    android:textSize="18sp"
                                    app:font="@{@string/pt_sans_web_text_regular}"/>




                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/total_amount"
                                    android:textSize="18sp"
                                    app:font="@{@string/pt_sans_web_text_regular}"/>



                            </LinearLayout>





                        </LinearLayout>




                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/select"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:font="@{@string/pt_sans_web_text_regular}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/client_payment_mode"
                android:textSize="18sp"
                app:font="@{@string/pt_sans_web_text_regular}"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:text="@string/cash"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:font="@{@string/pt_sans_web_text_regular}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/credit"
                        android:background="@drawable/bordor_lineblue"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        app:font="@{@string/pt_sans_web_text_regular}"/>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


</layout>