<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callfeedbackVm"
            type="com.spider.star.nexbase.call.viewmodal.CallFeedbackVm" />

    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3985a5">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_left_arrow" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/closecall"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            app:font="@{@string/pt_sans_web_text_regular}"/>

                    </LinearLayout>

                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_tickmark" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Dear Raj, Your service request no:1315 has Successfully completed by Mainkandan."
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/kindly_give_as_feedback"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <EditText
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/squareborder_linegray"
                    android:paddingStart="3dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <TextView
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#3985a5"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/your_request_is_over"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <TextView
                    android:id="@+id/update_status"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/cornorroundred"
                    android:gravity="center"
                    android:text="@string/closecall"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>

            </LinearLayout>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>
</layout>